Import of FLORA/Devel-SelfStubber-1.05 from CPAN.
gitpan-cpan-distribution: Devel-SelfStubber
gitpan-cpan-version:      1.05
gitpan-cpan-path:         FLORA/Devel-SelfStubber-1.05.tar.gz
gitpan-cpan-author:       FLORA
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,12 @@
 name    = Devel-SelfStubber
-version = 1.04
+version = 1.05
 author  = The Perl 5 Porters
 license = Perl_5
 copyright_holder = The Perl 5 Porters
 
 [@Basic]
+
+[DualLife]
 
 [MetaConfig]
 [MetaJSON]
