--- a/META.yml
+++ b/META.yml
@@ -19,7 +19,7 @@ resources:
   bugtracker: http://rt.perl.org/rt3/
   homepage: http://search.cpan.org/dist/Devel-SelfStubber
   repository: git://github.com/rafl/devel-selfstubber.git
-version: 1.04
+version: 1.05
 x_Dist_Zilla:
   plugins:
     -
@@ -78,6 +78,10 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Basic/UploadToCPAN'
       version: 4.102346
+    -
+      class: Dist::Zilla::Plugin::DualLife
+      name: DualLife
+      version: 0.01
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: MetaConfig
